--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <h1>Hello World</h1>
+    <!-- <h1>Hello World</h1> -->
 
     <script type="text/javascript" src="bundle.js"></script>
   </body>
